fix z-index

--- a/src/components/Notification/Notification.scss
+++ b/src/components/Notification/Notification.scss
@@ -12,7 +12,7 @@ $notification-spacing-y: 8px;
   width: $notification-container-width;
   bottom: $notification-padding-y;
   right: $notification-padding-x;
-  z-index: $olt-z-index-notification-close;
+  z-index: $olt-z-index-notification;
 
   @media (max-width: map-get($olt-v2-breakpoints, sm)) {
     width: $notification-container-width-mobile;
@@ -47,7 +47,6 @@ $notification-spacing-y: 8px;
   border-radius: $notification-border-radius;
   padding-left: $notification-content-padding-x;
   padding-right: $notification-content-padding-x;
-  z-index: $olt-z-index-notification;
   box-shadow: $notification-box-shadow;
   display: flex;
   flex-wrap: wrap;
@@ -103,7 +102,6 @@ $notification-spacing-y: 8px;
     border: none;
     padding: 0;
     font-size: $notification-icon-size*2/3; // icons are set to 150% font size
-    z-index: $olt-z-index-notification-close;
 
     &:focus {
       outline: 0;
