--- a/src/core/globals/vars.scss
+++ b/src/core/globals/vars.scss
@@ -69,9 +69,7 @@ $olt-z-index-modal: 1002;
 $olt-z-index-modal-close: 1003;
 $olt-z-index-modal-dialog: 999;
 $olt-z-index-snackbar: 1200;
-$olt-z-index-notification: 1002;
-$olt-z-index-notification-close: 1003;
-$olt-z-index-notification-dialog: 999;
+$olt-z-index-notification: 1300;
 $olt-z-index-tooltip: 950;
 $olt-z-index-navbar-content: 1000;
 // make sure that the backdrop is below the content,
